gnome-shell/gnome-shell.css
/* ... */
.app-view-controls {
  padding-bottom: 32px; }

.app-view-control {
  padding: 4px 32px; }
  .app-view-control:checked {
    color: #d8dee9;
    background-color: #5E6A82;
    border: 1px solid #1f232b;
    text-shadow: none;
    icon-shadow: none; }
  .app-view-control:first-child {
    border-right-width: 0;
    border-radius: 3px 0 0 3px; }
  .app-view-control:last-child {
    border-radius: 0 3px 3px 0; }

.app-well-app,
.app-well-app.app-folder,
.show-apps,
.grid-search-result,
.overview-tile,
.dash-item-container .overview-tile {
  background-color: transparent;
  border: none; }
  .app-well-app:hover .overview-icon, .app-well-app:focus .overview-icon, .app-well-app:selected .overview-icon,
  .app-well-app.app-folder:hover .overview-icon,
  .app-well-app.app-folder:focus .overview-icon,
  .app-well-app.app-folder:selected .overview-icon,
  .show-apps:hover .overview-icon,
  .show-apps:focus .overview-icon,
  .show-apps:selected .overview-icon,
  .grid-search-result:hover .overview-icon,
  .grid-search-result:focus .overview-icon,
  .grid-search-result:selected .overview-icon,
  .overview-tile:hover .overview-icon,
  .overview-tile:focus .overview-icon,
  .overview-tile:selected .overview-icon,
  .dash-item-container .overview-tile:hover .overview-icon,
  .dash-item-container .overview-tile:focus .overview-icon,
  .dash-item-container .overview-tile:selected .overview-icon {
    background-color: #3d4555;
    transition-duration: 0ms;
    border-image: none;
    background-image: none; }
  .app-well-app:active .overview-icon, .app-well-app:checked .overview-icon,
  .app-well-app.app-folder:active .overview-icon,
  .app-well-app.app-folder:checked .overview-icon,
  .show-apps:active .overview-icon,
  .show-apps:checked .overview-icon,
  .grid-search-result:active .overview-icon,
  .grid-search-result:checked .overview-icon,
  .overview-tile:active .overview-icon,
  .overview-tile:checked .overview-icon,
  .dash-item-container .overview-tile:active .overview-icon,
  .dash-item-container .overview-tile:checked .overview-icon {
    background-color: #3d4555;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15);
    color: #d8dee9; }

.app-well-app-running-dot, .app-grid-running-dot {
  width: 5px;
  height: 5px;
  background-color: #81a1c1;
  border-radius: 5px !important;
  box-shadow: 0px 0px 5px 4px #5E6A82; }

.app-well-app .overview-icon,
.app-well-app.app-folder .overview-icon,
.show-apps .overview-icon,
.grid-search-result .overview-icon,
.overview-tile .overview-icon,
.dash-item-container .overview-tile .overview-icon {
  background-color: transparent;
  color: #d8dee9;
  border: none;
  transition-duration: 100ms;
  text-align: center;
  box-shadow: none;
  border-radius: 18px;
  padding: 8px; }

/* App Folders */
.app-well-app.app-folder, .app-folder .overview-icon {
  background-color: #39404f;
  border-radius: 18px; }

.app-folder-dialog {
  background-color: rgba(35, 40, 49, 0.95);
  border: none;
  box-shadow: none;
  border-radius: 30px; }
  .app-folder-dialog .edit-folder-button {
    padding: 0;
    width: 36px;
    height: 36px;
    border-radius: 18px; }
    .app-folder-dialog .edit-folder-button > StIcon {
      icon-size: 16px; }

.app-well-app.app-folder > .overview-icon {
  background-color: rgba(46, 52, 64, 0.35); }

.show-apps .show-apps-icon {
  color: #d8dee9; }

.show-apps:checked .show-apps-icon,
.show-apps:focus .show-apps-icon {
  color: #d8dee9;
  transition-duration: 100ms; }

.app-folder-popup {
  -arrow-border-radius: 8px;
  -arrow-background-color: rgba(46, 52, 64, 0.5);
  -arrow-base: 24px;
  -arrow-rise: 11px; }

.app-folder-popup-bin {
  padding: 5px;
  background: rgba(46, 52, 64, 0.5); }

.app-folder-icon {
  padding: 5px;
  spacing-rows: 5px;
  spacing-columns: 5px; }

.page-indicator {
  padding: 6px 12px; }
  .page-indicator .page-indicator-icon {
    width: 12px;
    height: 12px;
    border-radius: 12px;
    background-image: none;
    background-color: #6f7d98; }
  .page-indicator:hover .page-indicator-icon {
    background-image: none;
    background-color: rgba(255, 255, 255, 0.5); }
  .page-indicator:active .page-indicator-icon {
    background-image: none;
    background-color: rgba(255, 255, 255, 0.7); }
  .page-indicator:checked .page-indicator-icon {
    background-image: none;
    background-color: #FFFFFF;
    transition-duration: 0s; }

.app-well-app > .overview-icon.overview-icon-with-label,
.grid-search-result .overview-icon.overview-icon-with-label {
  padding: 10px 8px 5px 8px;
  spacing: 4px; }

.workspace-thumbnails {
  visible-width: 32px;
  spacing: 11px;
  padding: 8px;
  border-radius: 0; }
  .workspace-thumbnails:rtl {
    border-radius: 0; }

.workspace-thumbnail-indicator {
  border: 4px solid rgba(94, 106, 130, 0.8);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  padding: 0; }

.search-display > StBoxLayout,
.all-apps,
.frequent-apps > StBoxLayout {
  padding: 0px 88px 10px 88px; }

.page-navigation-arrow {
  background-color: transparent;
  margin: 6px;
  padding: 18px;
  width: 24px;
  height: 24px;
  border-radius: 99px; }
  .page-navigation-arrow:insensitive {
    border-color: transparent;
    background-color: transparent;
    background-image: none;
    box-shadow: inset 0 1px rgba(255, 255, 255, 0), 0 1px rgba(255, 255, 255, 0);
    text-shadow: none;
    icon-shadow: none; }
  .page-navigation-arrow:hover {
    background-color: rgba(94, 106, 130, 0.5); }
  .page-navigation-arrow:active {
    background-color: #5E6A82; }

.workspace-thumbnails {
  color: #d8dee9;
  background-color: transparent;
  border: none; }

.search-statustext, .no-frequent-applications-label {
  font-size: 2em;
  font-weight: bold;
  color: #d8dee9; }

/* NOTIFICATIONS & MESSAGE TRAY */
.url-highlighter {
  link-color: #77839c; }
/* ... */

